apps/mini-book-hub/ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-book-hub
  labels:
    app.kubernetes.io/name: mini-book-hub
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: mini-book-hub
    app.kubernetes.io/managed-by: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: mini-book-hub.local
      http:
        paths:
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 3000
          - path: /reader
            pathType: Prefix
            backend:
              service:
                name: reader-service
                port:
                  number: 3000
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
